--- a/projects/Abilitee/index.html
+++ b/projects/Abilitee/index.html
@@ -41,9 +41,10 @@
             <h1 class="headline headline-dark intro-title">Summary</h1>
 
             <p class="animate-right intro">
-                Full summary text, large amount of text that explains the project and other stuff.
-                Full summary text, large amount of text that explains the project and other stuff.
-                Full summary text, large amount of text that explains the project and other stuff.
+                Wat als… je gevaarlijke procedures eindeloos kan uittesten in een
+                veilige omgeving? Met die premisse gingen we aan de slag toen we
+                abilitee creëerden met RMDY. Een virtual reality 3D productivity
+                configurator, of ook wel: een virtuele trainingsassistent.
             </p>
 
             <h1 class="headline headline-dark my-work-title">Sprint</h1>
