--- a/projects/DiagnoseCar/index.html
+++ b/projects/DiagnoseCar/index.html
@@ -42,16 +42,13 @@
 
             <p class="animate-right intro">
                 Diagnose Car is an initiative of Connectief, in collaboration with Febiac, 
-                Belgium's automobile federation. Diagnose Car delivers cars to technical schools where car mechanics is taught. 
                 Since cars are becoming increasingly complex in terms of electronics, 
                 it is not always easy to inform students on a technology that changes more 
                 regularly than before and on the other hand to allow them to make mistakes and 
                 learn using a technology that is also becoming increasingly expensive and fragile. 
                 Diagnosis Car looks for the solution in Augmented & Mixed Reality. With the Hololens 
                 we offer them a solution with which students can visualize the cars in 3D, and with 
-                which they can also learn the procedures in mixed reality. This allows them to learn 
-                more immersive by making mistakes more easily. These tests are also monitored and a 
-                teacher can follow along on screen if he wants to. 
+                which they can also learn the procedures in mixed reality.
                 The application will also be built for smartphones and tablets.
             </p>
 
