--- a/projects/ZF/index.html
+++ b/projects/ZF/index.html
@@ -77,9 +77,11 @@
                     allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
 
-            <img class="animate-left" src="/images/Abilitee_Event.jpg">
+            <img class="animate-left" src="/images/Koh-tablet.png">
 
-            <img class="animate-right" src="/images/Abilitee.png">
+            <img class="animate-left" src="/images/img_mockup_zf.png">
+
+         
         </div>
     </section>
     <!-- END INTRODICTION -->
