--- a/projects/bmw-ar/index.html
+++ b/projects/bmw-ar/index.html
@@ -27,7 +27,11 @@
     </header>
     <!-- END HEADER -->
 
-    <section class="hero half-hero"> </section>
+
+    <section class="hero half-hero"></section>
+
+
+
     <!-- END HERO SECTION -->
 
     <section class="global-headline animate-top">
@@ -41,9 +45,13 @@
             <h1 class="headline headline-dark intro-title">Summary</h1>
 
             <p class="animate-right intro">
-                Full summary text, large amount of text that explains the project and other stuff.
-                Full summary text, large amount of text that explains the project and other stuff.
-                Full summary text, large amount of text that explains the project and other stuff.
+                Eind februari 2019 organiseert BMW Jorssen Noord een lanceringsevent
+                voor de nieuwe BMW 3 reeks Berline. Tijdens dit event zet de
+                BMW-concessiehouder innovatieve technologieën centraal, naar
+                analogie met de technische vernuftigheden die de gloednieuwe BMW
+                bezit. Het doel is om enkele virtual en augmented
+                reality-toepassingen te creëren. Ik ga aan de slag en bouw een
+                AR-applicatie en twee hologrammen.
             </p>
 
             <h1 class="headline headline-dark my-work-title">Sprint</h1>
