--- a/index.html
+++ b/index.html
@@ -226,32 +226,6 @@
     </section>
 
 
-
-
-    <section class="project">
-        <div class="project-info">
-            <div class="project-title animate-right global-headline padding-right padding-left-sm">
-                <h1 class="headline headline-dark">Electrical Board VR training</h1>
-            </div>
-            <div class="project-description animate-right padding-right padding-left-sm">
-                <p>
-                    In Technopolis neem je niet alleen een virtuele duikvlucht, je gaat letterlijk de lucht in. Een grijparm heft het harnas op waar je met een VR-bril in zit. Naast het prachtige landschap dat je in virtual reality ziet, voel je ook wind. Je stuurt makkelijk zelf. Je begint op een berg en vliegt tot aan een waterval. Daarna kan je kiezen: rechtdoor, rechts of links. Zo vlieg je verder langs hoge bergtoppen, diepe wateren en mysterieuze kastelen. De beleving duurt ongeveer twee minuten, zelfs al crash je onderweg
-                </p>
-                <a href="./projects/Technopolis/index.html" class="btn body-btn">
-                    <i class="fas fa-caret-right"></i>
-                    See project
-                </a>
-            </div>
-            <div class="project-img animate-left">
-                <iframe src="https://player.vimeo.com/video/361761071" width="100%" height="100%" frameborder="0"
-                allow="autoplay; fullscreen" allowfullscreen></iframe>
-            </div>
-        </div>
-    </section>
-
- 
-
-
     <section class="project">
         <div class="project-info alt">
             <div class="project-title animate-left global-headline padding-left padding-right-sm">
@@ -278,6 +252,34 @@ kan schakelen. En de leerkracht virtueel les kan geven.
 
 
     <section class="project">
+        <div class="project-info">
+            <div class="project-title animate-right global-headline padding-right padding-left-sm">
+                <h1 class="headline headline-dark">Electrical Board VR training</h1>
+            </div>
+            <div class="project-description animate-right padding-right padding-left-sm">
+                <p>
+                    In Technopolis neem je niet alleen een virtuele duikvlucht, je gaat letterlijk de lucht in. 
+                    Een grijparm heft het harnas op waar je met een VR-bril in zit. 
+                    Naast het prachtige landschap dat je in virtual reality ziet, voel je ook wind. 
+                    Je stuurt makkelijk zelf. Je begint op een berg en vliegt tot aan een waterval. 
+                    Daarna kan je kiezen: rechtdoor, rechts of links. Zo vlieg je verder langs hoge 
+                    bergtoppen, diepe wateren en mysterieuze kastelen. De beleving duurt ongeveer twee minuten, 
+                    zelfs al crash je onderweg
+                </p>
+                <a href="./projects/Technopolis/index.html" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
+            </div>
+            <div class="project-img animate-left">
+                <iframe src="https://player.vimeo.com/video/361761071" width="100%" height="100%" frameborder="0"
+                allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="project">
         <div class="project-info alt">
             <div class="project-title animate-left global-headline padding-left padding-right-sm">
                 <h1 class="headline headline-dark">Nostalgeo</h1>
@@ -288,10 +290,7 @@ kan schakelen. En de leerkracht virtueel les kan geven.
                     interactieve kaarttoepassingen en ruimtelijke analyse. 
                     Naast Nostalgeo is het ook de drijvende kracht achter Aircheckr.com en andere digitale kaarttoepassingen.
                 </p>
-                <a href="./projects/ZF/index.html" class="btn body-btn">
-                    <i class="fas fa-caret-right"></i>
-                    See project
-                </a>
+               
             </div>
             <div class="project-img animate-right">
                 <iframe src="https://player.vimeo.com/video/260728989" width="100%" height="100%" frameborder="0"
@@ -310,10 +309,7 @@ kan schakelen. En de leerkracht virtueel les kan geven.
                 <p>
                    Take a virtual look inside the RMDY office building
                 </p>
-                <a href="./projects/DiagnoseCar/index.html" class="btn body-btn">
-                    <i class="fas fa-caret-right"></i>
-                    Similar projects
-                </a>
+            
             </div>
             <div class="project-img animate-right">
                 <iframe src="https://player.vimeo.com/video/244617325" width="100%" height="100%" frameborder="0"
