:zap: fix videos on homepage

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     See project
                 </a>
             </div>
-            <div class="project-img animate-left">
+            <div class="embed-container project-img animate-left">
                 <iframe src="https://player.vimeo.com/video/294163053" width="100%" height="100%" frameborder="0"
                 allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
@@ -271,7 +271,7 @@ kan schakelen. En de leerkracht virtueel les kan geven.
                     See project
                 </a>
             </div>
-            <div class="project-img animate-left">
+            <div class="embed-container project-img animate-left">
                 <iframe src="https://player.vimeo.com/video/361761071" width="100%" height="100%" frameborder="0"
                 allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
@@ -292,7 +292,7 @@ kan schakelen. En de leerkracht virtueel les kan geven.
                 </p>
                
             </div>
-            <div class="project-img animate-right">
+            <div class="embed-container project-img animate-right">
                 <iframe src="https://player.vimeo.com/video/260728989" width="100%" height="100%" frameborder="0"
     allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
@@ -311,7 +311,7 @@ kan schakelen. En de leerkracht virtueel les kan geven.
                 </p>
             
             </div>
-            <div class="project-img animate-right">
+            <div class="embed-container project-img animate-right">
                 <iframe src="https://player.vimeo.com/video/244617325" width="100%" height="100%" frameborder="0"
                 allow="autoplay; fullscreen" allowfullscreen iframe\>
             </div>
