Added images and text

--- a/projects/Abilitee/index.html
+++ b/projects/Abilitee/index.html
@@ -71,7 +71,8 @@
 
     <section>
         <div class="container project-media-list">
-            <img class="animate-left" src="/images/Abilitee.png">
+            <img class="animate-left" src="/images/MultipleScreens.jpg">
+
 
             <div class="embed-container animate-right">
                 <iframe src="https://player.vimeo.com/video/349032113" width="100%" height="100%" frameborder="0"
@@ -80,14 +81,13 @@
 
             <img class="animate-left" src="/images/Abilitee_Event.jpg">
 
+            <img class="animate-left" src="/images/Abilitee.png">
 
             <div class="embed-container animate-right">
                 <iframe src="https://player.vimeo.com/video/408895517" width="100%" height="100%" frameborder="0"
                     allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
 
-
-            <img class="animate-right" src="/images/Abilitee.png">
         </div>
     </section>
     <!-- END INTRODICTION -->
