--- a/projects/bmw-ar/index.html
+++ b/projects/bmw-ar/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/styles.css" />
 </head>
 
-<body id="abilitee">
+<body id="bmw-ar">
     <header>
         <div class="container">
             <nav class="nav">
@@ -79,16 +79,23 @@
 
     <section>
         <div class="container project-media-list">
-            <img class="animate-left" src="/images/Abilitee.png">
+            <img class="animate-left" src="/images/Bmw.jpg">
 
             <div class="embed-container animate-right">
                 <iframe src="https://player.vimeo.com/video/325609926" width="100%" height="100%" frameborder="0"
                     allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
 
-            <img class="animate-left" src="/images/Abilitee_Event.jpg">
+            <img class="animate-left" src="/images/BMWAR.jpg">
 
-            <img class="animate-right" src="/images/Abilitee.png">
+            <img class="animate-right" src="/images/BMW_Holo.jpg">
+
+
+            <div class="embed-container animate-right">
+                <iframe src="https://player.vimeo.com/video/318700410" width="100%" height="100%" frameborder="0"
+                    allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
+
         </div>
     </section>
     <!-- END INTRODICTION -->
@@ -97,5 +104,3 @@
 </body>
 
 </html>
-
-<iframe title="vimeo-player" src="https://player.vimeo.com/video/318700410" width="640" height="1137" frameborder="0" allowfullscreen></iframe>
