--- a/projects/DiagnoseCar/index.html
+++ b/projects/DiagnoseCar/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/styles.css" />
 </head>
 
-<body id="abilitee">
+<body id="diagnoseCar">
     <header>
         <div class="container">
             <nav class="nav">
@@ -32,7 +32,7 @@
 
     <section class="global-headline animate-top">
         <div class="container">
-            <h1 class="titleproject">Diagnose Car Electrical Car Training with Mixed Reality (Hololens)</h1>
+            <h1 class="titleproject">Diagnose Car Mixed Reality</h1>
         </div>
     </section>
 
@@ -62,7 +62,6 @@
                 <p class="contributions label">Contribution</p>
 
                 <ul class="contributions fix">
-                    <li>UX/UI</li>
                     <li>Unity Development</li>
                     <li>3D modelling</li>
                     <li>3D texturing</li>
@@ -76,16 +75,12 @@
 
     <section>
         <div class="container project-media-list">
-            <img class="animate-left" src="/images/Abilitee.png">
+           
 
             <div class="embed-container animate-right">
-                <iframe src="https://player.vimeo.com/video/325609926" width="100%" height="100%" frameborder="0"
+                <iframe src="https://player.vimeo.com/video/403280781" width="100%" height="100%" frameborder="0"
                     allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
-
-            <img class="animate-left" src="/images/Abilitee_Event.jpg">
-
-            <img class="animate-right" src="/images/Abilitee.png">
         </div>
     </section>
     <!-- END INTRODICTION -->
