--- a/projects/Technopolis/index.html
+++ b/projects/Technopolis/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/styles.css" />
 </head>
 
-<body id="abilitee">
+<body id="technopolis">
     <header>
         <div class="container">
             <nav class="nav">
@@ -67,21 +67,17 @@
 
     <section>
         <div class="container project-media-list">
-            <img class="animate-left" src="/images/Abilitee.png">
-
-            <div class="embed-container animate-right">
-                <iframe src="https://player.vimeo.com/video/325609926" width="100%" height="100%" frameborder="0"
-                    allow="autoplay; fullscreen" allowfullscreen></iframe>
-            </div>
+           
 
             <div class="embed-container animate-right">
                 <iframe src="https://player.vimeo.com/video/325609769" width="100%" height="100%" frameborder="0"
                     allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
 
-            <img class="animate-left" src="/images/Abilitee_Event.jpg">
+            <img class="animate-left" src="/images/Parapente1.png">
 
-            <img class="animate-right" src="/images/Abilitee.png">
+            <img class="animate-left" src="/images/Parapante3.jpg">
+
         </div>
     </section>
 
