--- a/projects/ZF/index.html
+++ b/projects/ZF/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/styles.css" />
 </head>
 
-<body id="abilitee">
+<body id="zf">
     <header>
         <div class="container">
             <nav class="nav">
@@ -70,8 +70,6 @@
 
     <section>
         <div class="container project-media-list">
-            <img class="animate-left" src="/images/Abilitee.png">
-
             <div class="embed-container animate-right">
                 <iframe src="https://player.vimeo.com/video/337459729" width="100%" height="100%" frameborder="0"
                     allow="autoplay; fullscreen" allowfullscreen></iframe>
