Added weekly challenges

--- a/index.html
+++ b/index.html
@@ -166,6 +166,27 @@
     <section class="project">
         <div class="project-info">
             <div class="project-title animate-right global-headline padding-right padding-left-sm">
+                <h1 class="headline headline-dark">Design concepts</h1>
+            </div>
+            <div class="project-description animate-right padding-right padding-left-sm">
+                <p>
+                     Website concepten
+                </p>
+                <a href="./projects/Concepts/index.html" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
+            </div>
+            <div class="project-img animate-left">
+                <img src="images/GoogleDrive concept.png" alt="Picture of " />
+            </div>
+        </div>
+    </section>
+
+
+    <section class="project">
+        <div class="project-info">
+            <div class="project-title animate-right global-headline padding-right padding-left-sm">
                 <h1 class="headline headline-dark">Technopolis Parapente</h1>
             </div>
             <div class="project-description animate-right padding-right padding-left-sm">
