--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section class="hero" id="hero">
         <div class="container">
-            <h1 class="title">3D artist and UX/UI designer</h1>
+            <h1 class="title">UX/UI designer and 3D artist</h1>
 
             <div class="headline-description">
                 <div class="single-animation">
@@ -45,7 +45,7 @@
     <section class="global-headline animate-top">
         <div class="container">
             <h2 class="introduction">
-                I am a 3D artist and AR/VR designer with an extensive background in
+                I am a UX/UI designer, 3D artist and AR/VR developer with an extensive background in
                 graphics design. My passion is conceiving and developing experiences.
                 The unique way of designing user interfaces and outlining the user
                 experience in these applications fascinates me immensely.
@@ -158,7 +158,7 @@
                 </a>
             </div>
             <div class="project-img animate-right">
-                <img src="images/Abilitee.png" alt="Our Story" />
+                <img src="images/MultipleScreens.jpg" alt="Our Story" />
             </div>
         </div>
     </section>
@@ -166,11 +166,11 @@
     <section class="project">
         <div class="project-info">
             <div class="project-title animate-right global-headline padding-right padding-left-sm">
-                <h1 class="headline headline-dark">Design concepts</h1>
+                <h1 class="headline headline-dark">Weekly design warm-up</h1>
             </div>
             <div class="project-description animate-right padding-right padding-left-sm">
                 <p>
-                     Website concepten
+                    Collection of weekly design challenge to help flex the creative muscles.
                 </p>
                 <a href="./projects/Concepts/index.html" class="btn body-btn">
                     <i class="fas fa-caret-right"></i>
@@ -179,6 +179,28 @@
             </div>
             <div class="project-img animate-left">
                 <img src="images/GoogleDrive concept.png" alt="Picture of " />
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="project">
+        <div class="project-info alt">
+            <div class="project-title animate-left global-headline padding-left padding-right-sm">
+                <h1 class="headline headline-dark">Windturbine ZF</h1>
+            </div>
+            <div class="project-description animate-left padding-left padding-right-sm">
+                <p>
+                    Het marketing- en communicatiebureau King of Hearts krijgt van hun klant ZF Wind Power de vraag om met “iets indrukwekkend” op de beurs WindEnergy Hamburg te staan. Als wereldwijde leverancier van tandwielkasten voor windturbines is het niet zo vanzelfsprekend om je gigantische onderdelen op een beurs op te stellen. Bovendien is hun nieuwste ontwikkeling nog niet gebouwd en zijn ze genoodzaakt om naar andere middelen te grijpen voor de introductie hiervan. King of Hearts stelt een AR-toepassing voor en komt bij ons terecht via Glenn, hun voormalige stagiair en onze huidige collega.
+                </p>
+                <a href="./projects/ZF/index.html" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
+            </div>
+            <div class="project-img animate-right">
+                <img src="images/Koh-tablet.png" alt="Our Story" />
             </div>
         </div>
     </section>
@@ -204,48 +226,7 @@
         </div>
     </section>
 
-
-    <section class="project">
-        <div class="project-info alt">
-            <div class="project-title animate-left global-headline padding-left padding-right-sm">
-                <h1 class="headline headline-dark">Windturbine ZF</h1>
-            </div>
-            <div class="project-description animate-left padding-left padding-right-sm">
-                <p>
-                    Het marketing- en communicatiebureau King of Hearts krijgt van hun klant ZF Wind Power de vraag om met “iets indrukwekkend” op de beurs WindEnergy Hamburg te staan. Als wereldwijde leverancier van tandwielkasten voor windturbines is het niet zo vanzelfsprekend om je gigantische onderdelen op een beurs op te stellen. Bovendien is hun nieuwste ontwikkeling nog niet gebouwd en zijn ze genoodzaakt om naar andere middelen te grijpen voor de introductie hiervan. King of Hearts stelt een AR-toepassing voor en komt bij ons terecht via Glenn, hun voormalige stagiair en onze huidige collega.
-                </p>
-                <a href="./projects/ZF/index.html" class="btn body-btn">
-                    <i class="fas fa-caret-right"></i>
-                    See project
-                </a>
-            </div>
-            <div class="project-img animate-right">
-                <img src="images/Koh-tablet.png" alt="Our Story" />
-            </div>
-        </div>
-    </section>
-
-    <section class="project">
-        <div class="project-info">
-            <div class="project-title animate-right global-headline padding-right padding-left-sm">
-                <h1 class="headline headline-dark">Supernova Galaxy shooter AR/VR multiplayer</h1>
-            </div>
-            <div class="project-description animate-right padding-right padding-left-sm">
-                <p>
-                    In Technopolis neem je niet alleen een virtuele duikvlucht, je gaat letterlijk de lucht in. Een grijparm heft het harnas op waar je met een VR-bril in zit. Naast het prachtige landschap dat je in virtual reality ziet, voel je ook wind. Je stuurt makkelijk zelf. Je begint op een berg en vliegt tot aan een waterval. Daarna kan je kiezen: rechtdoor, rechts of links. Zo vlieg je verder langs hoge bergtoppen, diepe wateren en mysterieuze kastelen. De beleving duurt ongeveer twee minuten, zelfs al crash je onderweg
-                </p>
-                <a href="./projects/Technopolis/index.html" class="btn body-btn">
-                    <i class="fas fa-caret-right"></i>
-                    See project
-                </a>
-            </div>
-            <div class="embed-container project-img animate-left">
-                <iframe src="https://player.vimeo.com/video/294163053" width="100%" height="100%" frameborder="0"
-                allow="autoplay; fullscreen" allowfullscreen></iframe>
-            </div>
-        </div>
-    </section>
-
+  
 
     <section class="project">
         <div class="project-info alt">
@@ -299,23 +280,23 @@ kan schakelen. En de leerkracht virtueel les kan geven.
         </div>
     </section>
 
-
     <section class="project">
         <div class="project-info alt">
-            <div class="project-title animate-left global-headline padding-left padding-right-sm">
-                <h1 class="headline headline-dark">Nostalgeo</h1>
+            <div class="project-title animate-left global-headline padding-left padding-right-sm"> 
+                <h1 class="headline headline-dark">Supernova Galaxy shooter AR/VR multiplayer</h1>
             </div>
-            <div class="project-description animate-left padding-left padding-right-sm">
+            <div class="project-description animate-left padding-left padding-left-sm">
                 <p>
-                    Nostalgeo is een product van Nazka Mapps dat zich specialiseert in slimme kaarten, 
-                    interactieve kaarttoepassingen en ruimtelijke analyse. 
-                    Naast Nostalgeo is het ook de drijvende kracht achter Aircheckr.com en andere digitale kaarttoepassingen.
+                    In Technopolis neem je niet alleen een virtuele duikvlucht, je gaat letterlijk de lucht in. Een grijparm heft het harnas op waar je met een VR-bril in zit. Naast het prachtige landschap dat je in virtual reality ziet, voel je ook wind. Je stuurt makkelijk zelf. Je begint op een berg en vliegt tot aan een waterval. Daarna kan je kiezen: rechtdoor, rechts of links. Zo vlieg je verder langs hoge bergtoppen, diepe wateren en mysterieuze kastelen. De beleving duurt ongeveer twee minuten, zelfs al crash je onderweg
                 </p>
-               
+                <a href="./projects/Technopolis/index.html" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
             </div>
-            <div class="embed-container project-img animate-right">
-                <iframe src="https://player.vimeo.com/video/260728989" width="100%" height="100%" frameborder="0"
-    allow="autoplay; fullscreen" allowfullscreen></iframe>
+            <div class="embed-container project-img animate-left">
+                <iframe src="https://player.vimeo.com/video/294163053" width="100%" height="100%" frameborder="0"
+                allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
         </div>
     </section>
@@ -341,6 +322,29 @@ kan schakelen. En de leerkracht virtueel les kan geven.
             </div>
         </div>
     </section>
+
+
+    <section class="project">
+        <div class="project-info alt">
+            <div class="project-title animate-left global-headline padding-left padding-right-sm">
+                <h1 class="headline headline-dark">Nostalgeo</h1>
+            </div>
+            <div class="project-description animate-left padding-left padding-right-sm">
+                <p>
+                    Nostalgeo is een product van Nazka Mapps dat zich specialiseert in slimme kaarten, 
+                    interactieve kaarttoepassingen en ruimtelijke analyse. 
+                    Naast Nostalgeo is het ook de drijvende kracht achter Aircheckr.com en andere digitale kaarttoepassingen.
+                </p>
+               
+            </div>
+            <div class="embed-container project-img animate-right">
+                <iframe src="https://player.vimeo.com/video/260728989" width="100%" height="100%" frameborder="0"
+    allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+
+
 
 
    <!--
