Update project VREG tool

--- a/index.html
+++ b/index.html
@@ -205,6 +205,25 @@
         </div>
     </section>
 
+    <section class="project">
+        <div class="project-info">
+            <div class="project-title animate-right global-headline padding-right padding-left-sm">
+                <h1 class="headline headline-dark">Vreg vergelijk energiecontracten</h1>
+            </div>
+            <div class="project-description animate-right padding-right padding-left-sm">
+                <p>
+                  Redesign van de huide VREG V-test
+                </p>
+                <a href="./projects/Vreg/index.html" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
+            </div>
+            <div class="project-img animate-left">
+                <img src="images/Vreg.png" alt="Picture of Parapent" />
+            </div>
+        </div>
+    </section>
 
     <section class="project">
         <div class="project-info">
