--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </p>
                 <a href="./projects/Vreg/index.html" class="btn body-btn">
                     <i class="fas fa-caret-right"></i>
-                    See project
+                    Under construction
                 </a>
             </div>
             <div class="project-img animate-left">
