Update Images Vreg

--- a/projects/Vreg/index.html
+++ b/projects/Vreg/index.html
@@ -69,6 +69,11 @@
 
             <img class="animate-left" src="/images/Vreg.png">
 
+            <img class="animate-left" src="/images/Vreg_Mockup_Info.png">
+
+            <img class="animate-left" src="/images/Vreg_Mockup_Results.png">
+
+
         </div>
     </section>
 
