--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
             </div>
             <div class="project-description animate-right padding-right padding-left-sm">
                 <p>
-                  Redesign van de huide VREG V-test
+                    Redesign van de huide VREG V-test met focus op de optimalisatie voor mobile.
                 </p>
                 <a href="./projects/Vreg/index.html" class="btn body-btn">
                     <i class="fas fa-caret-right"></i>
-                    Under construction
+                    See project
                 </a>
             </div>
             <div class="project-img animate-left">
