--- a/projects/Vreg/index.html
+++ b/projects/Vreg/index.html
@@ -41,7 +41,7 @@
             <h1 class="headline headline-dark intro-title">Summary</h1>
 
             <p class="animate-right intro">
-                Parapente VR experience for Technopolis Belgium
+                Redesign van de huide VREG V-test met focus op de optimalisatie voor mobile.
             </p>
 
             <h1 class="headline headline-dark my-work-title">Sprint</h1>
