--- a/index.html
+++ b/index.html
@@ -114,31 +114,7 @@
     </section>
 -->
 
-    <section class="project">
-        <div class="project-info">
-            <div class="project-title animate-right global-headline padding-right padding-left-sm">
-                <h1 class="headline headline-dark">BMW AR Application</h1>
-            </div>
-            <div class="project-description animate-right padding-right padding-left-sm">
-                <p>
-                    Eind februari 2019 organiseert BMW Jorssen Noord een lanceringsevent
-                    voor de nieuwe BMW 3 reeks Berline. Tijdens dit event zet de
-                    BMW-concessiehouder innovatieve technologieën centraal, naar
-                    analogie met de technische vernuftigheden die de gloednieuwe BMW
-                    bezit. Het doel is om enkele virtual en augmented
-                    reality-toepassingen te creëren. Ik ga aan de slag en bouw een
-                    AR-applicatie en twee hologrammen.
-                </p>
-                <a href="./projects/bmw-ar/index.html" class="btn body-btn">
-                    <i class="fas fa-caret-right"></i>
-                    See project
-                </a>
-            </div>
-            <div class="project-img animate-left">
-                <img src="images/Bmw.jpg" alt="Picture of BWM AR Application" />
-            </div>
-        </div>
-    </section>
+    
 
     <section class="project">
         <div class="project-info alt">
@@ -224,6 +200,33 @@
             </div>
         </div>
     </section>
+
+    <section class="project">
+        <div class="project-info alt">
+            <div class="project-title animate-left global-headline padding-left padding-right-sm">
+                <h1 class="headline headline-dark">BMW AR Application</h1>
+            </div>
+            <div class="project-description animate-left padding-left padding-right-sm">
+                <p>
+                    Eind februari 2019 organiseert BMW Jorssen Noord een lanceringsevent
+                    voor de nieuwe BMW 3 reeks Berline. Tijdens dit event zet de
+                    BMW-concessiehouder innovatieve technologieën centraal, naar
+                    analogie met de technische vernuftigheden die de gloednieuwe BMW
+                    bezit. Het doel is om enkele virtual en augmented
+                    reality-toepassingen te creëren. Ik ga aan de slag en bouw een
+                    AR-applicatie en twee hologrammen.
+                </p>
+                <a href="./projects/bmw-ar/index.html" class="btn body-btn">
+                    <i class="fas fa-caret-right"></i>
+                    See project
+                </a>
+            </div>
+            <div class="project-img animate-right">
+                <img src="images/Bmw.jpg" alt="Picture of BWM AR Application" />
+            </div>
+        </div>
+    </section>
+
 
     <section class="project">
         <div class="project-info">
