--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 </a>
             </div>
             <div class="project-img animate-left">
-                <img src="images/GoogleDrive concept.png" alt="Picture of " />
+                <img src="images/Frame 1.png" alt="Picture of " />
             </div>
         </div>
     </section>
