--- a/projects/Concepts/index.html
+++ b/projects/Concepts/index.html
@@ -54,9 +54,9 @@
     <section>
         <div class="container project-media-list">
            
-            <img class="animate-right" src="/images/Print-1.jpg">
+            <img class="animate-right" src="/images/Frame 1.png">
 
-            <img class="animate-left" src="/images/Print.jpg">
+            <img class="animate-left" src="/images/Frame 2.png">
 
             <img class="animate-right" src="/images/GoogleDrive concept.png">
 
